# open-manipulator-baguncinha

./: .gitignore
catkin_ws/src/: ost.txt  ost.yaml
catkin_ws/src/bir_marker_localization/: CMakeLists.txt  LICENSE  README.md  package.xml
catkin_ws/src/bir_marker_localization/config/: article_world_test.yaml  default.yaml  markers_config.yaml
catkin_ws/src/bir_marker_localization/include/marker_localization/: free_markers_localization.h  marker.h  marker_detect.h  marker_pose_estimator.h  marker_transform.h  robot_markers_localization.h
catkin_ws/src/bir_marker_localization/launch/: bir_marker_localization.launch  free_markers_localization.launch  robot_markers_localization.launch
catkin_ws/src/bir_marker_localization/msg/: MarkerPose.msg  MarkerPoseArray.msg
catkin_ws/src/bir_marker_localization/src/: free_markers_localization.cpp  free_markers_localization_node.cpp  image_publisher.py  marker.cpp  marker_detect.cpp  marker_pose_estimator.cpp  marker_transform.cpp  robot_markers_localization.cpp  robot_markers_localization_node.cpp
catkin_ws/src/bir_marker_localization/test/: free_markers_localization.test  free_markers_localization_test.cpp  marker_detect_test.cpp  marker_pose_estimator_test.cpp  marker_transform_vector_test.cpp  marker_vector_test.cpp  markers_config_test.yaml
catkin_ws/src/manipulator-control/: CMakeLists.txt  package.xml
catkin_ws/src/manipulator-control/launch/: box_p_gazebo.launch  manipulator_control.launch  world_sim.launch
catkin_ws/src/manipulator-control/materials/scripts/: tag1.material  tag2.material  tag3.material
catkin_ws/src/manipulator-control/meshes/: tag.stl
catkin_ws/src/manipulator-control/scripts/: main_class.py  malha_aberta.py  move_group_python_interface_tutorial.py  moveit_joint_test.py  moveit_test.py  pick_box.py  print_aruco_pose.py  search.py  state_machine.py  to_tag.py  topose.py  xyz_move.py
catkin_ws/src/manipulator-control/scripts/smach_func/: aprox.py  check_aprox.py  close_gripper.py  gripper.py  home.py  init_pose.py  pick.py  place_pose.py  pose2pick.py  search1.py  search2.py  sobe1.py  tag_check.py  tf_world_box.py
catkin_ws/src/manipulator-control/urdf/: block.urdf  block.urdf.xacro  box.urdf.xacro  caixa_teste.xacro
catkin_ws/src/manipulator-control/worlds/: my_world.world  world_one.world
catkin_ws/src/open_manipulator_p/open_manipulator_p_controller/launch/: open_manipulator_p_controller.launch
catkin_ws/src/open_manipulator_p/open_manipulator_p_description/launch/: open_manipulator_p_upload.launch
catkin_ws/src/open_manipulator_p/open_manipulator_p_description/meshes/: bir_gripperMX_claw.dae  bir_gripperMX_fixed.dae
catkin_ws/src/open_manipulator_p/open_manipulator_p_description/urdf/: open_manipulator_p.gazebo.xacro  open_manipulator_p.transmission.xacro  open_manipulator_p.urdf.xacro  open_manipulator_p_with_gripper.urdf.xacro
catkin_ws/src/open_manipulator_p_controls/open_manipulator_p_controllers/launch/: joint_trajectory_controller.launch
catkin_ws/src/open_manipulator_p_controls/open_manipulator_p_hw/launch/: open_manipulator_p_control.launch  open_manipulator_p_gazebo.launch
catkin_ws/src/open_manipulator_p_controls/open_manipulator_p_moveit/: .setup_assistant  CMakeLists.txt  package.xml
catkin_ws/src/open_manipulator_p_controls/open_manipulator_p_moveit/config/: fake_controllers.yaml  open_manipulator_p.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml
catkin_ws/src/open_manipulator_p_controls/open_manipulator_p_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
catkin_ws/src/open_manipulator_p_controls/open_manipulator_p_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
catkin_ws/src/open_manipulator_p_controls/open_manipulator_p_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  open_manipulator_p.srdf
catkin_ws/src/open_manipulator_p_controls/open_manipulator_p_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  moveit.rviz  planning_context.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  (+2 more)
catkin_ws/src/usb_cam/launch/: usb_cam-test.launch
(+3 files in other folders)
